--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,38 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
+<ion-header>
+  <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-button >
+        <ion-icon slot="icon-only" name="logo-ionic"></ion-icon>
+      </ion-button>
+    </ion-buttons>
     <ion-title>
-      Blank
+     Photo
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="ion-padding">
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+
+    <ion-button expand="block" color="tertiary">
+      <ion-icon slot="start" name="image"></ion-icon>
+      Ouvrir la bibliothèque
+    </ion-button>
+
+    <ion-button expand="block" color="secondary" (click)="addPhotoToGallery()">
+      <ion-icon slot="start" name="camera"></ion-icon>
+      Prendre une photo
+    </ion-button>
+
+    <div class="flex">
+      <div class="img-box">
+      </div>
+    </div>
+
+    <ion-button expand="block" color="warning">
+      <ion-icon slot="start" name="cloud-upload"></ion-icon>
+      Envoyer la photo
+    </ion-button>
+
+
 </ion-content>
